# controller_architecture

./: CMakeLists.txt  LICENSE  README.md  parameters.yaml  simple_adaptive_pid_ir.json
code_generator/: Makefile  adapter.c
controller-models/: adaptive_pid_controller.jsonld  commentedJSON.txt  controller_abag_pid_metamodel.txt  error.jsonld_prog
controller-models/older/: p_controller.jsonld  pid_controller.json  pid_controller_old.jsonld
controller-models/uc1/: uc1_controllers_coordination_left_arm_z_axis_linear.jsonld  uc1_controllers_coordination_right_arm_z_axis_linear.jsonld  uc1_functions_and_data_structures_left_arm.jsonld  uc1_functions_and_data_structures_right_arm.jsonld  uc1_monitors_and_constraints_left_arm.jsonld  uc1_monitors_and_constraints_right_arm.jsonld
controller-models/uc1_z_axis_linear/: metamodel.jsonld  notes.txt  old_uc1_controller_and_data_for_left_arm_z_axis_linear copy.txt  old_uc1_controller_and_data_for_left_arm_z_axis_linear.txt  old_uc1_controllers_configuration_left_arm_z_axis_linear.txt  old_uc1_monitors_and_constraints_left_arm_z_axis_linear copy.txt  old_uc1_monitors_and_constraints_left_arm_z_axis_linear.txt  uc1_controller_and_data_for_left_arm_z_axis_linear.jsonld  uc1_controllers_coordination_left_arm_z_axis_linear copy.jsonld.txt  uc1_controllers_coordination_left_arm_z_axis_linear.jsonld  uc1_controllers_coordination_left_arm_z_axis_linear.jsonld.txt  uc1_monitors_and_constraints_left_arm_z_axis_linear.jsonld
controller-models/uc3/: uc3_common_functions_data_structures_monitors_constraints.jsonld  uc3_controllers_coordination_left_arm_z_axis_linear.jsonld  uc3_controllers_coordination_right_arm_z_axis_linear copy.jsonld  uc3_functions_and_data_structures_left_arm.jsonld  uc3_functions_and_data_structures_right_arm.jsonld  uc3_monitors_and_constraints_left_arm.jsonld  uc3_monitors_and_constraints_right_arm.jsonld
controller-models/uc3_abag/: uc3_common_functions_data_structures_monitors_constraints.jsonld  uc3_controllers_coordination_left_arm_z_axis_linear.jsonld  uc3_controllers_coordination_right_arm_z_axis_linear.jsonld  uc3_functions_and_data_structures_left_arm.jsonld  uc3_functions_and_data_structures_right_arm.jsonld  uc3_monitors_and_constraints_left_arm.jsonld  uc3_monitors_and_constraints_right_arm.jsonld
controller-models/uc3_pid/: uc3_common_functions_data_structures_monitors_constraints.jsonld  uc3_controllers_coordination_left_arm_z_axis_linear.jsonld  uc3_controllers_coordination_right_arm_z_axis_linear copy.jsonld  uc3_functions_and_data_structures_left_arm.jsonld  uc3_functions_and_data_structures_right_arm.jsonld  uc3_monitors_and_constraints_left_arm.jsonld  uc3_monitors_and_constraints_right_arm.jsonld
metamodels/: algorithm.jsonld
metamodels/architecture_components/: monitor.jsonld  plan.jsonld
metamodels/controllers/: controller.jsonld  error.jsonld  error_signal.jsonld  functions.jsonld
metamodels/controllers/ABAG/: abag.jsonld
python_helpers/: namespaces_gen_and_consistency_test.py  types_in_model_in_namespaces_test.py  unique_types_in_metamodels_test.py  unused_id_in_model_graph_test.py
src/: a.out  adaptive_control.cpp  adaptive_controller_comments.md  sample_pid.cpp  sample_pid_c.c  simple_adaptive_pid.cpp
synthesis/: check_namespaces_consistency.py  namespaces.py  runner.py  runner_uc1.py  runner_uc2_pid.py
synthesis/utility/: helper.py  resolver.py
urdf/: Kinova_1.urdf
utils/src/: CMakeLists.txt  control_blocks.c  monitors.c  utilities.c
(+29 files in other folders)
